# CChess

./: .gitignore  .gitmodules  README.md
cchess_gui/: chess_board.py  chess_tournament.py  client.py  contest.py  context.py  engine_list  logger.py  main.py  surface_cache.py
engine/: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessBoardTest.cpp  ChessBoradTest.cpp  EngineTest.cpp  MCTSEngine.cpp  MCTSEngine.h  WeightedRandomSelector.cpp  WeightedRandomSelector.h  build.sh  errorcode.h  server.cpp  store_errorcode.inc
engine/common/: MCTS.cpp  MCTS.h  spinlock.h
front_end/: main.py
